<resources>
    <string name="app_name">exercise_firebase_mvvm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="criar_nova_conta_aqui">Criar nova conta aqui!</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="list_of_crud">List of CRUD</string>
    <string name="button_add">ADD</string>
    <string name="button_exclude">Exclude</string>
    <string name="sign_out">Sign Out</string>
    <string name="uid">Uid</string>
    <string name="upadate">Upadate</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="button_view_page">View Pager</string>
</resources>