<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_fragment"
    tools:context=".view.SignInFragment">

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_in"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/size_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/margin_top_sign_in"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="@dimen/margin_top_sign_in"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/newAccountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/criar_nova_conta_aqui"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>