<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUpFragment"
    android:orientation="vertical"
    android:padding="@dimen/padding_fragment">

    <ImageView
        android:id="@+id/imageViewArrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"/>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_up"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/size_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/margin_top_sign_in"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/margin_top_sign_in"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

</LinearLayout>