<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainFragment">

    <LinearLayout
        android:id="@+id/linearLayoutArrow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity=""
        android:padding="@dimen/padding_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewGoBackToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout" />

        <TextView
            android:id="@+id/textViewTitleList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_crud"
            android:textSize="@dimen/size_title"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_top_sign_in"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_margin="@dimen/margin_top_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutArrow"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNameCrud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_margin="@dimen/margin_top_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldName"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPriceCrud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAddList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top_sign_in"
        android:text="@string/button_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonViewPage"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPrice"
        app:layout_constraintHorizontal_weight="1"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <Button
        android:id="@+id/buttonViewPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top_sign_in"
        android:text="@string/button_view_page"
        app:layout_constraintStart_toEndOf="@id/buttonAddList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPrice"
        app:layout_constraintHorizontal_weight="1"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewListCrud"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddList" />

</androidx.constraintlayout.widget.ConstraintLayout>